fixed layout bug that caused FF on MacOSX to put text from the body over text at the bottom of the map div
git-svn-id: http://svn.openlayers.org/trunk@467 dc9f47b5-9b13-0410-9fdd-eb0c1a62fdaf

--- a/website/common.css
+++ b/website/common.css
@@ -99,7 +99,7 @@ div#wrap {
 	font-size: 16px;
         float: right;
         width: 550px;
-	height: 275px;
+	height: 350px;
 	padding: 35px 10px 15px 35px;
 }
 #map iframe {
